<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/textID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/confirmationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_placed"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pickupTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickupTime"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/return_main_menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/return_main_menu" />
</RelativeLayout>